--- a/interface.yaml
+++ b/interface.yaml
@@ -1,3 +1,7 @@
 - template: interface.erb
   interface: xe-0/0/0
   ip_address: 1.1.1.1/30
+
+- template: interface.erb
+  interface: xe-1/0/0
+  ip_address: 2.2.2.1/30
